# Quant-Kernel

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  claude_session.txt  compile_command.json  pyproject.toml
cpp/: CMakeLists.txt
cpp/bench/: benchmark_all.cpp  benchmark_bsm_batch.cpp
cpp/include/quantkernel/: qk_abi.h  qk_api.h
cpp/src/: qk_api.cpp
cpp/src/algorithms/adjoint_greeks/: adjoint_greeks_models.h
cpp/src/algorithms/adjoint_greeks/aad/: aad.cpp  aad.h
cpp/src/algorithms/adjoint_greeks/common/: internal_util.h  params.h
cpp/src/algorithms/adjoint_greeks/likelihood_ratio/: likelihood_ratio.cpp  likelihood_ratio.h
cpp/src/algorithms/adjoint_greeks/pathwise_derivative/: pathwise_derivative.cpp  pathwise_derivative.h
cpp/src/algorithms/black_scholes/: bs_pricer.cpp  bs_pricer.h
cpp/src/algorithms/closed_form_semi_analytical/: closed_form_models.h
cpp/src/algorithms/closed_form_semi_analytical/bachelier/: bachelier.cpp  bachelier.h
cpp/src/algorithms/closed_form_semi_analytical/black_1976/: black_1976.cpp  black_1976.h
cpp/src/algorithms/closed_form_semi_analytical/black_scholes_merton/: black_scholes_merton.cpp  black_scholes_merton.h
cpp/src/algorithms/closed_form_semi_analytical/common/: internal_util.h  params.h
cpp/src/algorithms/closed_form_semi_analytical/dupire/: dupire.cpp  dupire.h
cpp/src/algorithms/closed_form_semi_analytical/heston/: heston.cpp  heston.h
cpp/src/algorithms/closed_form_semi_analytical/merton_jump_diffusion/: merton_jump_diffusion.cpp  merton_jump_diffusion.h
cpp/src/algorithms/closed_form_semi_analytical/sabr/: sabr.cpp  sabr.h
cpp/src/algorithms/closed_form_semi_analytical/variance_gamma/: variance_gamma.cpp  variance_gamma.h
cpp/src/algorithms/finite_difference_methods/: finite_difference_models.h
cpp/src/algorithms/finite_difference_methods/adi/: adi.cpp  adi.h
cpp/src/algorithms/finite_difference_methods/common/: internal_util.h  params.h
cpp/src/algorithms/finite_difference_methods/crank_nicolson/: crank_nicolson.cpp  crank_nicolson.h
cpp/src/algorithms/finite_difference_methods/explicit_fd/: explicit_fd.cpp  explicit_fd.h
cpp/src/algorithms/finite_difference_methods/implicit_fd/: implicit_fd.cpp  implicit_fd.h
cpp/src/algorithms/finite_difference_methods/psor/: psor.cpp  psor.h
cpp/src/algorithms/fourier_transform_methods/: DESIGN_charfn_concept.md  fourier_transform_models.h
cpp/src/algorithms/fourier_transform_methods/carr_madan_fft/: carr_madan_fft.cpp  carr_madan_fft.h
cpp/src/algorithms/fourier_transform_methods/common/: internal_util.h  params.h
cpp/src/algorithms/fourier_transform_methods/cos_method/: cos_method.cpp  cos_method.h
cpp/src/algorithms/fourier_transform_methods/fractional_fft/: fractional_fft.cpp  fractional_fft.h
cpp/src/algorithms/fourier_transform_methods/hilbert_transform/: hilbert_transform.cpp  hilbert_transform.h
cpp/src/algorithms/fourier_transform_methods/lewis_fourier_inversion/: lewis_fourier_inversion.cpp  lewis_fourier_inversion.h
cpp/src/algorithms/implied_vol/: iv_solver.cpp  iv_solver.h
cpp/src/algorithms/integral_quadrature/: integral_quadrature_models.h
cpp/src/algorithms/integral_quadrature/adaptive_quadrature/: adaptive_quadrature.cpp  adaptive_quadrature.h
cpp/src/algorithms/integral_quadrature/common/: internal_util.h  params.h
cpp/src/algorithms/integral_quadrature/gauss_hermite/: gauss_hermite.cpp  gauss_hermite.h
cpp/src/algorithms/integral_quadrature/gauss_laguerre/: gauss_laguerre.cpp  gauss_laguerre.h
cpp/src/algorithms/integral_quadrature/gauss_legendre/: gauss_legendre.cpp  gauss_legendre.h
cpp/src/algorithms/machine_learning/: machine_learning_models.h
cpp/src/algorithms/machine_learning/common/: internal_util.h  params.h
cpp/src/algorithms/machine_learning/deep_bsde/: deep_bsde.cpp  deep_bsde.h
cpp/src/algorithms/machine_learning/deep_hedging/: deep_hedging.cpp  deep_hedging.h
cpp/src/algorithms/machine_learning/neural_sde_calibration/: neural_sde_calibration.cpp  neural_sde_calibration.h
cpp/src/algorithms/machine_learning/pinns/: pinns.cpp  pinns.h
cpp/src/algorithms/monte_carlo/: mc_pricer.cpp  mc_pricer.h
cpp/src/algorithms/monte_carlo_methods/: monte_carlo_models.h
cpp/src/algorithms/monte_carlo_methods/antithetic_variates/: antithetic_variates.cpp  antithetic_variates.h
cpp/src/algorithms/monte_carlo_methods/common/: internal_util.h  params.h
cpp/src/algorithms/monte_carlo_methods/control_variates/: control_variates.cpp  control_variates.h
cpp/src/algorithms/monte_carlo_methods/euler_maruyama/: euler_maruyama.cpp  euler_maruyama.h
cpp/src/algorithms/monte_carlo_methods/heston_monte_carlo/: heston_lr_delta.cpp  heston_lr_delta.h  heston_monte_carlo.cpp  heston_monte_carlo.h
cpp/src/algorithms/monte_carlo_methods/importance_sampling/: importance_sampling.cpp  importance_sampling.h
cpp/src/algorithms/monte_carlo_methods/local_vol_monte_carlo/: local_vol_monte_carlo.cpp  local_vol_monte_carlo.h
cpp/src/algorithms/monte_carlo_methods/longstaff_schwartz/: longstaff_schwartz.cpp  longstaff_schwartz.h
cpp/src/algorithms/monte_carlo_methods/milstein/: milstein.cpp  milstein.h
cpp/src/algorithms/regression_approximation/: regression_approximation_models.h
cpp/src/algorithms/tree_lattice_methods/: tree_lattice_models.h
cpp/src/common/: charfn_concepts.h  math_util.h  mc_engine.h  model_concepts.h  option_util.h
cpp/tests/: CMakeLists.txt  test_bs_pricer.cpp  test_closed_form.cpp  test_closed_form_models.cpp  test_error_handling.cpp  test_fdm_iqm_ram_agm_mlm.cpp  test_fourier.cpp  test_harness.h  test_iv_solver.cpp  test_main.cpp  test_mc_pricer.cpp  test_monte_carlo.cpp  test_tree_lattice.cpp  test_tree_lattice_models.cpp
fuzztest/: CMakeLists.txt  fuzz_adjoint_greeks_models.cpp  fuzz_closed_form_models.cpp  fuzz_finite_difference_models.cpp  fuzz_fourier_transform_models.cpp  fuzz_integral_quadrature_models.cpp  fuzz_machine_learning_models.cpp  fuzz_monte_carlo_models.cpp  fuzz_regression_approximation_models.cpp  fuzz_tree_lattice_models.cpp
(+86 files in other folders)
